2013-02-25  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* sysdeps/powerpc/powerpc32/power4/fpu/mpa.c (__mp_dbl): Sync
	up changes with default code.
	* sysdeps/powerpc/powerpc64/power4/fpu/mpa.c (__mp_dbl):
	Likewise.

2013-02-24  Allan McRae  <allan@archlinux.org>

	* manual/socket.texi (The Internet Namespace): Order menu items
	to match that in the file.

	* manual/libc-texinfo.sh: Use @detailmenu around the detailed
	node listing of the info page menu.

2013-02-21  Joseph Myers  <joseph@codesourcery.com>

	[BZ #13550]
	* sysdeps/i386/bp-asm.h: Remove file.
	* sysdeps/i386/add_n.S: Do not include "bp-sym.h" and "bp-asm.h".
	(PARMS): Do not use macros from bp-asm.h.
	(S1): Likewise.
	(S2): Likewise.
	(SIZE): Likewise.
	(__mpn_add_n): Do not use BP_SYM
	* sysdeps/i386/addmul_1.S: Do not include "bp-sym.h" and
	"bp-asm.h".
	(PARMS): Do not use macros from bp-asm.h.
	(S1): Likewise.
	(SIZE): Likewise.
	(__mpn_addmul_1): Do not use BP_SYM
	* sysdeps/i386/bsd-_setjmp.S: Do not include "bp-sym.h" and
	"bp-asm.h".
	(PARMS): Do not use macros from bp-asm.h.
	(SIGMSK): Likewise.
	(_setjmp): Likewise.  Do not use BP_SYM.
	* sysdeps/i386/bsd-setjmp.S: Do not include "bp-sym.h" and
	"bp-asm.h".
	(PARMS): Do not use macros from bp-asm.h.
	(SIGMSK): Likewise.
	(setjmp): Likewise.  Do not use BP_SYM.
	* sysdeps/i386/fpu/s_frexp.S: Do not include "bp-sym.h" and
	"bp-asm.h".
	(PARMS): Do not use macros from bp-asm.h.
	(__frexp): Do not use BP_SYM.
	(frexp): Likewise.
	* sysdeps/i386/fpu/s_frexpf.S: Do not include "bp-sym.h" and
	"bp-asm.h".
	(PARMS): Do not use macros from bp-asm.h.
	(__frexpf): Do not use BP_SYM.
	(frexpf): Likewise.
	* sysdeps/i386/fpu/s_frexpl.S: Do not include "bp-sym.h" and
	"bp-asm.h".
	(PARMS): Do not use macros from bp-asm.h.
	(__frexpl): Do not use BP_SYM.
	(frexpl): Likewise.
	* sysdeps/i386/fpu/s_remquo.S: Do not include "bp-sym.h" and
	"bp-asm.h".
	(PARMS): Do not use macros from bp-asm.h.
	(__remquo): Do not use BP_SYM.
	(remquo): Likewise.