@@ -1,5 +1,8 @@
 2013-02-25  Siddhesh Poyarekar  <siddhesh@redhat.com>
 
+	* sysdeps/ieee754/dbl-64/slowexp.c (__slowexp): Remove commented
+	code.
+
 	* sysdeps/powerpc/powerpc32/power4/fpu/mpa.c (__mp_dbl): Sync
 	up changes with default code.
 	* sysdeps/powerpc/powerpc64/power4/fpu/mpa.c (__mp_dbl):
